# Time-Series-Insight-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  app.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: API_GUIDE.md  DOCKER_CI_CD.md  DOCKER_DEPLOYMENT.md  GITHUB_ACTIONS_SETUP.md
examples/: api_client_example.py  basic_usage.py  sample_data.py
examples/data/: arima_sample.csv  example_data.csv  seasonal_sample.csv  stock_sample.csv  trend_sample.csv
examples/output/: analysis_results.json  analysis_summary.csv
middleware/: __init__.py  error_handlers.py  logging_middleware.py  rate_limiting.py
models/: schemas.py
nginx/: nginx.conf
routes/: __init__.py  analysis.py  models.py  upload.py  visualization.py
scripts/: docker-deploy.ps1  docker-deploy.sh  start.bat  start.sh  start_dev.py  start_prod.py
test_output/: analysis_results.json
tests/: test_api.py  test_data_processor.py
time_series_insight/: __init__.py  api.py
time_series_insight/analysis/: __init__.py  model_identifier.py
time_series_insight/cli/: __init__.py  main.py
time_series_insight/core/: __init__.py  data_processor.py
time_series_insight/estimation/: __init__.py  parameter_estimator.py
time_series_insight/evaluation/: __init__.py  model_evaluator.py
time_series_insight/visualization/: __init__.py  plotter.py
